config mishka buttons

--- a/lib/trivia_web/live/default_live/index.html.heex
+++ b/lib/trivia_web/live/default_live/index.html.heex
@@ -9,5 +9,22 @@
   </p>
 
   <p>Hello</p>
+  <Button.button color="dark">Dark</Button.button>
+  <Button.button color="primary">Primary</Button.button>
+
+
+  <TriviaWeb.Components.Button.button>Natural</TriviaWeb.Components.Button.button>
+
+  <TriviaWeb.Components.Button.button color="white">White</TriviaWeb.Components.Button.button>
+
+  <TriviaWeb.Components.Button.button color="dark">Dark</TriviaWeb.Components.Button.button>
+
+  <TriviaWeb.Components.Button.button color="primary">Primary</TriviaWeb.Components.Button.button>
+
+  <TriviaWeb.Components.Button.button color="red" variant="outline" size="extra_small">Primary
+  </TriviaWeb.Components.Button.button>
+
 
 </div>
+
+// variants
