--- a/lib/trivia_web/live/default_live/index.html.heex
+++ b/lib/trivia_web/live/default_live/index.html.heex
@@ -1,4 +1,4 @@
-<div>
+<div class="flex flex-col items-start gap-4">
   This is the live view index page now!!!!
 
   <p>
@@ -7,6 +7,8 @@
   <p>
     <%= @default %>
   </p>
+
+  <.iconify icon="heroicons-solid:collection" class="w-8 h-8 text-base-content cursor-pointer" /> 
 
   <p>Hello</p>
   <Button.button color="dark">Dark</Button.button>
