--- a/lib/trivia_web/components/layouts/root.html.heex
+++ b/lib/trivia_web/components/layouts/root.html.heex
@@ -9,6 +9,7 @@
   <.live_title suffix=" · Phoenix Framework">
     <%= assigns[:page_title] || "Trivia" %>
   </.live_title>
+  <link phx-track-static rel="stylesheet" href={~p"/images/icons/icons.css"} />
   <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
   <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
   </script>
