--- a/lib/trivia_web/live/default_live/index.html.heex
+++ b/lib/trivia_web/live/default_live/index.html.heex
@@ -8,25 +8,9 @@
     <%= @default %>
   </p>
 
-  <.iconify icon="heroicons-solid:collection" class="w-8 h-8 text-base-content cursor-pointer" /> 
+  <.iconify icon="heroicons:rectangle-stack-16-solid" class="w-8 h-8 text-base-content cursor-pointer" />
+  <.iconify icon="heroicons:users-solid" class="w-8 h-8 text-base-content cursor-pointer" />
 
-  <p>Hello</p>
   <Button.button color="dark">Dark</Button.button>
   <Button.button color="primary">Primary</Button.button>
-
-
-  <TriviaWeb.Components.Button.button>Natural</TriviaWeb.Components.Button.button>
-
-  <TriviaWeb.Components.Button.button color="white">White</TriviaWeb.Components.Button.button>
-
-  <TriviaWeb.Components.Button.button color="dark">Dark</TriviaWeb.Components.Button.button>
-
-  <TriviaWeb.Components.Button.button color="primary">Primary</TriviaWeb.Components.Button.button>
-
-  <TriviaWeb.Components.Button.button color="red" variant="outline" size="extra_small">Primary
-  </TriviaWeb.Components.Button.button>
-
-
 </div>
-
-// variants
