--- a/lib/trivia_web/components/layouts/app.html.heex
+++ b/lib/trivia_web/components/layouts/app.html.heex
@@ -1,5 +1,6 @@
 <header class="body">
-  This is the header
+  <p>Welcome, <%= @user.name %>!</p>
+
 </header>
 <main class="body">
   <.flash_group flash={@flash} />
