--- a/lib/trivia_web/components/layouts/app.html.heex
+++ b/lib/trivia_web/components/layouts/app.html.heex
@@ -1,7 +1,7 @@
-<header class="body">
-  <p>Welcome, <%= @user.name %>!</p>
-
+<header class="h-12 border-b">
+  <p>This is the header</p>
 </header>
+
 <main class="body">
   <.flash_group flash={@flash} />
   <%= @inner_content %>
