--- a/lib/trivia_web/components/layouts/app.html.heex
+++ b/lib/trivia_web/components/layouts/app.html.heex
@@ -1,8 +1,27 @@
-<header class="h-12 border-b">
-  <p>This is the header</p>
+<header class="body h-14 border-b flex items-center justify-between">
+  <Logo.logo url={@logoUrl} />
+
+  <div class="flex gap-2 items-center">
+    <.link href={~p"/users/log_out"} method="delete">
+      <Button.button size="medium">
+        Log out
+      </Button.button>
+    </.link>
+
+    <Dropdown.dropdown relative="relative" clickable>
+      <Dropdown.dropdown_trigger trigger_id="unique_id">
+        <Avatar.avatar color="primary">SB</Avatar.avatar>
+      </Dropdown.dropdown_trigger>
+
+      <Dropdown.dropdown_content id="unique_id" space="small" rounded="large" width="w-24" padding="extra_small"
+        class=" bg-red-600">
+        Hello
+      </Dropdown.dropdown_content>
+    </Dropdown.dropdown>
+  </div>
 </header>
 
-<main class="body">
+<main class="body min-h-hero">
   <.flash_group flash={@flash} />
   <%= @inner_content %>
 </main>
