--- a/lib/trivia_web/components/layouts/app.html.heex
+++ b/lib/trivia_web/components/layouts/app.html.heex
@@ -1,5 +1,5 @@
 <header class="body h-14 border-b flex items-center justify-between">
-  <Logo.logo url={@logoUrl} />
+  <Logo.logo url={@logoUrl || "/" } />
 
   <div class="flex gap-2 items-center">
     <.link href={~p"/users/log_out"} method="delete">
