--- a/lib/trivia_web/live/default_live/index.html.heex
+++ b/lib/trivia_web/live/default_live/index.html.heex
@@ -14,6 +14,8 @@
 
   lorem2000
 
+  <.link navigate={~p"/onboarding"}>Onboard</.link>
+
   <!-- 
     <.iconify icon="heroicons:rectangle-stack-16-solid" class="w-8 h-8 text-base-content cursor-pointer" />
     <.iconify icon="heroicons:users-solid" class="w-8 h-8 text-base-content cursor-pointer" />
