--- a/lib/trivia_web/components/layouts/app.html.heex
+++ b/lib/trivia_web/components/layouts/app.html.heex
@@ -1,5 +1,6 @@
 <header class="body h-14 border-b flex items-center justify-between">
-  <Logo.logo url={@logoUrl || "/" } />
+  <Logo.logo url="hello" />
+
 
   <div class="flex gap-2 items-center">
     <.link href={~p"/users/log_out"} method="delete">
@@ -13,20 +14,34 @@
         <Avatar.avatar color="primary">SB</Avatar.avatar>
       </Dropdown.dropdown_trigger>
 
-      <Dropdown.dropdown_content id="unique_id" space="small" rounded="large" width="w-24" padding="extra_small"
-        class=" bg-red-600">
-        Hello
+      <Dropdown.dropdown_content id="unique_id" space="small" rounded="large" width="w-96" padding="extra_small"
+        class="w-32 bg-red-600 mr-96 mt-2">
+        <ul :for={link <- @links}>
+          <.link navigate={~p"/#{link.url}"}>
+            <li>{link.title}</li>
+          </.link>
+        </ul>
       </Dropdown.dropdown_content>
     </Dropdown.dropdown>
   </div>
 </header>
 
+<!--
+  <.link navigate={~p"/onboarding"}>Onboard</.link>
+
+  <.iconify icon="heroicons:rectangle-stack-16-solid" class="w-8 h-8 text-base-content cursor-pointer" />
+<.iconify icon={@icon} />
+-->
+
 <main class="body min-h-hero">
-  <h1>User Profile</h1>
 
   <ul>
     <li>Email: <%= @user_profile.user.email %>
     </li>
+  </ul>
+
+  <ul :for={link <- @links}>
+    <li>{link.title}</li>
   </ul>
 
 
