--- a/lib/trivia_web/components/layouts/app.html.heex
+++ b/lib/trivia_web/components/layouts/app.html.heex
@@ -1,6 +1,5 @@
 <header class="body h-14 border-b flex items-center justify-between">
-  <Logo.logo url="hello" />
-
+  <Logo.logo />
 
   <div class="flex gap-2 items-center">
     <.link href={~p"/users/log_out"} method="delete">
@@ -9,42 +8,37 @@
       </Button.button>
     </.link>
 
-    <Dropdown.dropdown relative="relative" clickable>
+    <%!-- <Dropdown.dropdown relative="relative" clickable>
       <Dropdown.dropdown_trigger trigger_id="unique_id">
         <Avatar.avatar color="primary">SB</Avatar.avatar>
       </Dropdown.dropdown_trigger>
 
       <Dropdown.dropdown_content id="unique_id" space="small" rounded="large" width="w-96" padding="extra_small"
-        class="w-32 bg-red-600 mr-96 mt-2">
+        class="w-36 bg-red-600 mt-2">
         <ul :for={link <- @links}>
-          <.link navigate={~p"/#{link.url}"}>
-            <li>{link.title}</li>
+          <.link navigate={~p"/#{link.url}"} class="flex gap-2 items-center group">
+            <.iconify icon={link.icon} class="group-hover:text-brand" />
+            <li class="group-hover:text-brand">{link.title}</li>
           </.link>
         </ul>
       </Dropdown.dropdown_content>
-    </Dropdown.dropdown>
+      </Dropdown.dropdown>
+      --%>
   </div>
 </header>
 
-<!--
-  <.link navigate={~p"/onboarding"}>Onboard</.link>
+<%!-- <.link navigate={~p"/onboarding"}>Onboard</.link>
+  <.link navigate={Routes.user_path(@socket, :index, id: link.url)} class="flex gap-2 items-center group">
+    <.iconify icon="heroicons:rectangle-stack-16-solid" class="w-8 h-8 text-base-content cursor-pointer text-brand" />
+    <.iconify icon={@icon} />
+    <ul>
+      <li>Email: <%= @profile.user.email %>
+      </li>
+    </ul>
+    --%>
 
-  <.iconify icon="heroicons:rectangle-stack-16-solid" class="w-8 h-8 text-base-content cursor-pointer" />
-<.iconify icon={@icon} />
--->
+    <main class="body min-h-hero">
 
-<main class="body min-h-hero">
-
-  <ul>
-    <li>Email: <%= @user_profile.user.email %>
-    </li>
-  </ul>
-
-  <ul :for={link <- @links}>
-    <li>{link.title}</li>
-  </ul>
-
-
-  <.flash_group flash={@flash} />
-  <%= @inner_content %>
-</main>
+      <.flash_group flash={@flash} />
+      <%= @inner_content %>
+    </main>
