--- a/lib/trivia_web/live/default_live/index.html.heex
+++ b/lib/trivia_web/live/default_live/index.html.heex
@@ -1,6 +1,9 @@
 <div class="flex flex-col items-start gap-4">
   This is the live view index page now!!!!
 
+  <p>User data: { @user.email}</p>
+
+
   <%!-- <.iconify icon="heroicons:users-solid" class="w-8 h-8 text-base-content cursor-pointer" />
   <Button.button color="dark">Dark</Button.button>
   --%>
