--- a/lib/trivia_web/live/profile_live/index.html.heex
+++ b/lib/trivia_web/live/profile_live/index.html.heex
@@ -11,11 +11,12 @@
       <div class="w-full h-36 border bg-neutral-300 rounded-md overflow-hidden"></div>
 
       <div class="flex items-center gap-2 mt-2">
-        <div class="w-28 h-28 border bg-neutral-300 rounded-full overflow-hidden"></div>
+        <div class="w-28 h-28 border bg-neutral-300 rounded-full overflow-hidden">
+          <img src={~p"/images/default.png"} class="w-full h-full" />
+        </div>
 
         <div>
           <p>User data: { @user.email}</p>
-
 
         </div>
       </div>
@@ -32,6 +33,7 @@
   <p>{@user.email}</p>
   <% end %>
 
+    <img src="<%= Routes.static_path(@conn, " /uploads/default.png") %>" alt="Profile Picture" />
     <img src="https://ui-avatars.com/api/?name=<%= URI.encode(@user.email || " Default User") %>" alt="Profile
     Picture" />
 
