--- a/lib/trivia_web/live/default_live/onboard.html.heex
+++ b/lib/trivia_web/live/default_live/onboard.html.heex
@@ -1,27 +1,23 @@
 <div class="flex flex-col items-start gap-4">
   Onboard page
 
-
-
-  <div class="mx-auto max-w-sm">
+  <div class="w-full flex flex-col items-center justify-center">
     <.header class="text-center">
-      Log in to account
+      Welcome to <span class="text-brand font-semibold">Trivia Clah</span>
       <:subtitle>
-        Don't have an account?
-        <.link navigate={~p"/users/register"} class="font-semibold text-brand hover:underline">
-          Sign up
-        </.link>
-        for an account now.
+        Just one more step to get started
       </:subtitle>
     </.header>
 
-    <.simple_form for={@form} id="onboard_form" phx-submit="save" phx-trigger-action={@trigger_submit}
-      action={~p"/profile/update?_action=onboard"} method="post">
-      <.input field={@form[:bio]} type="text" label="Bio" placeholder="Enter a short bio..." />
-
+    <.simple_form for={@form} id="onboard_form" phx-submit="save" phx-change="validate"
+      phx-trigger-action={@trigger_submit} action={~p"/profile/update?_action=onboard"} method="post"
+      class="w-full sm:w-1/2 md:w-1/3">
       <.error :if={@check_errors}>
         Oops, something went wrong! Please check the errors below.
       </.error>
+
+      <.input field={@form[:fullname]} type="text" label="Full Name" placeholder="Enter your full name here" />
+      <.input field={@form[:bio]} type="text" label="Bio" placeholder="Enter a short bio..." />
 
       <:actions>
         <.button phx-disable-with="Loading..." class="w-full">
