base default page

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
 @layer base {
   .body {
-    @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-4;
+    @apply max-w-[1380px] mx-auto px-4 sm:px-6 lg:px-4;
   }
 
   .debug {
@@ -19,5 +21,3 @@
     min-height: 1.5rem;
   }
 }
-
-
