--- a/lib/trivia_web/live/default_live/index.html.heex
+++ b/lib/trivia_web/live/default_live/index.html.heex
@@ -1,8 +1,57 @@
-<div class="flex flex-col items-start gap-4">
-  This is the live view index page now!!!!
+<div class="flex flex-col items-start gap-4 h-hero">
+  <div class="h-full w-full flex gap-2">
+    <div class="w-2/6 flex-shrink-0 debug max-h-full overflow-auto p-2">
+      <h1 class="text-xl font-semibold font-mono">Ongoing Arenas</h1>
 
-  <p>User data: { @user.email}</p>
+      <div class="">
+        <%= case @arenas do %>
+          <% nil -> %>
+            <div class="flex items-center justify-center mt-20">
+              <p>No arena to display right now!!</p>
+            </div>
+            <% arenas -> %>
+              <div class="flex flex-col gap-4">
+                <%= for arena <- arenas do %>
+                  <p>
+                    <% arena.name %>
+                  </p>
+                  <% end %>
+              </div>
+              <% end %>
+      </div>
 
+    </div>
+    <div class="flex flex-col gap-2 flex-grow">
+      <!-- NOTE: ongoing arenas -->
+      <div class="debug p-8">
+        <h1 class="text-lg font-semibold font-mono">Ongoing Arenas</h1>
+
+        <div>
+          You have not joined any arena yet!
+          <p class="text-brand text-sm font-semibold">Add a create or join arena buttons here</p>
+        </div>
+      </div>
+
+      <!-- NOTE: ongoing arenas -->
+      <div class="debug p-8">
+        <h1 class="text-lg font-semibold font-mono">Personal game - arena stats</h1>
+
+        <div>
+          This is your stats for the last arenas you participated in.
+        </div>
+      </div>
+
+      <!-- NOTE: ongoing arenas -->
+      <div class="debug p-8">
+        <h1 class="text-lg font-semibold font-mono">Community challenges</h1>
+
+        <div>
+          No community challenge yet!
+          <p>Check back later..</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
