--- a/lib/trivia_web/live/default_live/index.html.heex
+++ b/lib/trivia_web/live/default_live/index.html.heex
@@ -9,15 +9,19 @@
             <div class="flex items-center justify-center mt-20">
               <p>No arena to display right now!!</p>
             </div>
-            <% arenas -> %>
-              <div class="flex flex-col gap-4">
-                <%= for arena <- arenas do %>
-                  <p>
-                    <% arena.name %>
-                  </p>
-                  <% end %>
+            <% [] -> %>
+              <div class="flex items-center justify-center mt-20">
+                <p>No arena to display right now!!</p>
               </div>
-              <% end %>
+              <% arenas -> %>
+                <div class="flex flex-col gap-4">
+                  <%= for arena <- arenas do %>
+                    <p>
+                      {arena.id}
+                    </p>
+                    <% end %>
+                </div>
+                <% end %>
       </div>
 
     </div>
@@ -52,9 +56,27 @@
       </div>
     </div>
   </div>
+
+  <.modal :if={@live_action in [:new, :edit]} id="arena-modal" show on_cancel={JS.patch(~p"/")}>
+    <.live_component module={TriviaWeb.ArenaLive.FormComponent} id={@arena.id || :new} title={@page_title}
+      arena_theme={@arena_themes} action={@live_action} arena={@arena} patch={~p"/"} currentUser={@currentUser} />
+  </.modal>
 </div>
 
 
 <%!-- <.iconify icon="heroicons:users-solid" class="w-8 h-8 text-base-content cursor-pointer" />
 <Button.button color="dark">Dark</Button.button>
+
+<div id="arenas-list">
+  <%= for {id, arena} <- @streams.arenas do %>
+    <div id={"arena-#{id}"} class="arena-item">
+      <p>
+        <%= arena.name %>
+      </p>
+      <p>
+        <%= arena.no_of_players %> players
+      </p>
+    </div>
+    <% end %>
+</div>
 --%>
