--- a/lib/trivia_web/live/arena_live/index.html.heex
+++ b/lib/trivia_web/live/arena_live/index.html.heex
@@ -8,9 +8,9 @@
 </.header>
 
 
-<.modal :if={@live_action in [:new, :edit]} id="arena-modal" show on_cancel={JS.patch(~p"/arenas")}>
+<.modal :if={@live_action in [:new, :edit]} id="arena-modal" show on_cancel={JS.patch(~p"/")}>
   <.live_component module={TriviaWeb.ArenaLive.FormComponent} id={@arena.id || :new} title={@page_title}
-    arena_theme={@arena_themes} action={@live_action} arena={@arena} patch={~p"/arenas"} currentUser={@currentUser} />
+    arena_theme={@arena_themes} action={@live_action} arena={@arena} patch={~p"/"} currentUser={@currentUser} />
 </.modal>
 
 
