can now move created arena to new page, yaah!

--- a/lib/trivia_web/live/arena_live/arena_lobby.html.heex
+++ b/lib/trivia_web/live/arena_live/arena_lobby.html.heex
@@ -2,7 +2,7 @@
   Arena {@arena.id}
   <:subtitle>This is a arena record from your database.</:subtitle>
   <:actions>
-    <.link patch={~p"/arenas/#{@arena}/show/edit"} phx-click={JS.push_focus()}>
+    <.link patch={~p"/"} phx-click={JS.push_focus()}>
       <.button>Edit arena</.button>
     </.link>
   </:actions>
