start arena details ui

--- a/lib/trivia_web/components/layouts/app.html.heex
+++ b/lib/trivia_web/components/layouts/app.html.heex
@@ -9,7 +9,7 @@
 
         <.header>
           <:actions>
-            <.link patch={~p"/arenas/new"}>
+            <.link patch={~p"/create/new"}>
               <.button>Create an Arena</.button>
             </.link>
           </:actions>
