rempoove unused data from arena lobby

--- a/lib/trivia_web/live/arena_live/arena_lobby.html.heex
+++ b/lib/trivia_web/live/arena_live/arena_lobby.html.heex
@@ -4,6 +4,8 @@
     <!-- NOTE: Arena details -->
     <div class="flex flex-col gap-2 flex-grow debug">
       <h1 class="text-xl font-semibold mb-2">Active public Arenas</h1>
+      <.iconify icon="heroicons:cog-6-tooth" class="w-8 h-8 group-hover:text-brand" />
+
       <div>
         <.header>
           Arena {@arena.id}
